--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
 PORT=1211
-API_BASEURL=
-
 APP_URL=
+API_BASEURL=
+CDN_CSS=https://cdn.../name.min.css
+
 NODE_ENV=
 
 REACT_APP_BASEURL=https://baseUrl.com
 REACT_APP_API_BASEURL=${REACT_APP_BASEURL}/api/v1
 
-REACT_APP_ENCRYPTED_DATA_KEY=
 REACT_APP_APP_NAME=BBNPolls
 REACT_APP_PARENT_DOMAIN=
 
-CDN_CSS=https://cdn.../name.min.css
+REACT_APP_SOCIAL_TELEGRAM=https://telegram.org/
+REACT_APP_SOCIAL_DISCORD=https://discord.com/
+REACT_APP_SOCIAL_TWITTER=https://twitter.com/
+
+REACT_APP_PLACEHOLDER_PROFILE_PICTURE=https://via.placeholder.com/250?text=.
+NPM_TOKEN=
