--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "4.6.0",
     "next": "latest",
     "next-pwa": "5.5.4",
     "prop-types": "^15.8.1",
